@@ -387,6 +387,21 @@ namespace TEN::Renderer
 		m_invalidateCache = true;
 	}
 
+	RendererObject& Renderer11::GetRendererObject(GAME_OBJECT_ID id)
+	{
+		if (id == GAME_OBJECT_ID::ID_LARA_SKIN)
+		{
+			if (m_moveableObjects[GAME_OBJECT_ID::ID_LARA_SKIN].has_value())
+				return m_moveableObjects[GAME_OBJECT_ID::ID_LARA_SKIN].value();
+			else
+				return m_moveableObjects[GAME_OBJECT_ID::ID_LARA].value();
+		}
+		else
+		{
+			return m_moveableObjects[id].value();
+		}
+	}
+
 	RendererMesh* Renderer11::GetMesh(int meshIndex)
 	{
 		return m_meshes[meshIndex];
@@ -444,10 +459,7 @@ namespace TEN::Renderer
 
 		world = nativeItem->Pose.Orientation.ToRotationMatrix() * world;
 
-		short objNum = nativeItem->ObjectNumber;
-		if (objNum == ID_LARA) objNum = ID_LARA_SKIN;
-
-		auto& moveable = *m_moveableObjects[objNum];
+		auto& moveable = GetRendererObject((GAME_OBJECT_ID)nativeItem->ObjectNumber);
 
 		for (int i = 0; i< moveable.ObjectMeshes.size();i++)
 		{
