@@ -3,6 +3,7 @@ Version 1.0.7
 
 * Fix silent crash if skin joints or hair object is missing.
 * Fix holster meshes not displaying for Lara's shadow.
+* Use Lara object's own meshes if Lara skin object does not exist in level file.
 
 Version 1.0.6
 =============
